Fix nullable cycle read responses
